2002-02-09  Chris Demetriou  <cgd@broadcom.com>

	* ld.texinfo (Options): Add back in -nostdlib documentation,
	which had been inadvertently removed.

2002-02-09  Hans-Peter Nilsson  <hp@bitrange.com>

	* emultempl/mmix-elfnmmo.em (mmix_after_allocation): Adjust
	register section vma to a sane value after emitting error.  Make
	fatal conditions cause program exit when emitting message.

2002-02-08  Ivan Guzvinec <ivang@opencores.org>

	* configure.tgt: Add or32-*-rtems target.

2002-02-08  Alexandre Oliva  <aoliva@redhat.com>

	Contribute sh64-elf.
	2002-01-24  Alexandre Oliva  <aoliva@redhat.com>
	* emulparams/shelf32.sh (STACK_ADDR): Define as formerly defined
	in OTHER_RELOCATABLE_SECTIONS.
	2002-01-18  Alexandre Oliva  <aoliva@redhat.com>
	* emulparams/shelf32.sh (STACK_ADDR): Define.
	(OTHER_RELOCATABLE_SECTIONS): Renamed to...
	(OTHER_SECTIONS): this.	 Removed stack settings.
	* emulparams/shelf64.sh (OTHER_RELOCATABLE_SECTIONS): Do not set.
	(OTHER_SECTIONS): Reset after sourcing shelf32.sh.
	2001-03-12  DJ Delorie	<dj@redhat.com>
	* emultempl/sh64elf.em (sh64_elf_$_before_allocation): Disable
	relaxing if any shmedia or mixed sections are found.
	2001-03-07  DJ Delorie	<dj@redhat.com>
	* emultempl/sh64elf.em (sh64_elf_before_allocation): Pass f to
	einfo.	Gracefully decline to output to non-elf formats.
	2001-03-06  Hans-Peter Nilsson	<hpn@redhat.com>
	* emulparams/shelf64.sh (OTHER_RELOCATING_SECTIONS) <.stack>:
	Default to _end aligned to next multiple of 0x40000, plus 0x40000.
	* emulparams/shelf32.sh: Ditto.
	2001-01-14  Hans-Peter Nilsson	<hpn@cygnus.com>
	* emulparams/shelf32.sh (OTHER_RELOCATING_SECTIONS): Tweak
	comment.
	2001-01-10  Ben Elliston  <bje@redhat.com>
	* emulparams/shelf32.sh (OTHER_RELOCATING_SECTIONS): Avoid
	non-portable shell constructs. From Hans-Peter Nilsson.
	2001-01-09  Hans-Peter Nilsson	<hpn@cygnus.com>
	* emulparams/shelf64.sh (EXTRA_EM_FILE): Define empty.
	* Makefile.am (eshelf64.c, eshlelf64.c, eshlelf32.c): Adjust