@@ -1,3 +1,10 @@
+2002-02-10  Daniel Jacobowitz  <drow@mvista.com>
+
+	* ldmain.c: Add prototype for main ().
+	* lexsup.c: Guard declaration of strtoul with HAVE_STDLIB_H.
+	* emultempl/lnk960.em (lnk960_choose_target): Function should
+	take two arguments.
+
 2002-02-09  Chris Demetriou  <cgd@broadcom.com>
 
 	* ld.texinfo (Options): Add back in -nostdlib documentation,
